---
version: 0.11
date:    Mon Feb  6 21:18:14 PST 2006
changes:
- Added IF/ELSIF/ELSE support

---
version: 0.10
date:    Mon Feb  6 16:33:53 PST 2006
changes:
- Maiden voyage.
- Only supports text with simple variable substitution.