@@ -1,4 +1,4 @@
-use t::TestJemplate tests => 1;
+use t::TestJemplate tests => 2;
 
 filters { 'tt' => 'parse_lite' };
 no_diff;
@@ -6,14 +6,35 @@ run_is 'tt' => 'js';
 
 __END__
 
-=== PROCESS with no args
+=== IF
 --- tt
-Top
-[% PROCESS middle.tt %]
-Bottom
+[% IF foo == 'bar' %]
+Foo Bar
+[% END %]
 --- js
-output += 'Top\n';
-//line 2 "(unknown template)"
-output += context.process('middle.tt');
-output += '\nBottom\n';
+//line 3 "(unknown template)"
+if (stash.get('foo') == 'bar') {
+output += '\nFoo Bar\n';
+}
 
+output += '\n';
+
+=== IF/ELSE
+--- tt
+[% IF num % 2 -%]
+This is odd!
+[% ELSE -%]
+Now we are even!
+[% END -%]
+--- js
+//line 5 "(unknown template)"
+if (stash.get('num') % 2) {
+output += 'This is odd!\n';
+}
+else {
+output += 'Now we are even!\n';
+}
+
+=== IF/ELSIF
+
+=== IF/ELSIF/ELSE
